=============


2.39.3 - June ??, 2010

    Updated the Logtalk compiler in order to preprocess proprietary Prolog
    directives (using any defined config file hooks) after term-expansion
    but before trying to compile the directives as Logtalk directives. This
    change allows for simpler and more robust handling of Prolog proprietary
    directives, specially module directives.

    Changed the scope of the built-in methods phrase/2-3 from public to
    private for consistent meta-predicate semantics. Updated the "dcgs"
    example and the corresponding unit tests in order to comply with the
    new phrase/2-3 predicate scope.

    Corrected a bug in the implementation of the phrase/2-3 built-in methods
    that could allow access to non-visible grammar rules.

    Added goal_expansion/2 clauses to the SWI-Prolog and YAP config files in
    order to allow calling the Prolog built-in predicates phrase/2-3 with a
    Object::GrammarRuleBody in the first argument.

    Corrected the definitions of the predicates '$lgt_current_date'/3 and
    '$lgt_current_time'/3 in the Qu-Prolog config file and rename it to
    "qp.pl". Updated the minimum required version to 8.12 and changed the
    value of the Logtalk flag "prolog_dialect" from "qu" to "qp" in order
    to match the value of the new Prolog flag "dialect" implemented in
    Qu-Prolog 8.12.


2.39.2 - May 4, 2010

    Changed the internal representation of most entity properties to use a
    more compact bit representation, stored in the tables of loaded entities.

    Changed the internal representation of non-critical predicate properties
    to use a more compact bit representation, which includes the "multifile"
    predicate property, stored in the tables of entity declared predicates.

    Changed the type of the built-in methods (\+)/1, call/N, once/1, catch/3,
    throw/1, bagof/3, findall/3, forall/2, setof/3, self/1, sender/1, this/1